GNOME Bugzilla – Bug 684333
grilo: fix reference counting
Last modified: 2012-09-18 23:15:01 UTC
The sources hash table in the plugin wants to take ownership of the key and the value, but the key is owned by the GrlRegistry and the value is a GtkWidget and thus floating. Fix that by referencing both before adding them to the hash table.
Created attachment 224679 [details] [review] grilo: fix reference counting
Review of attachment 224679 [details] [review]: yes.
Attachment 224679 [details] pushed as 03c7fd8 - grilo: fix reference counting