grilo: fix reference counting

The sources hash table in the plugin wants to take ownership of the key and
the value, but the key is owned by the GrlRegistry and the value is a GtkWidget
and thus floating. Fix that by referencing both before adding them to the
hash table.

https://bugzilla.gnome.org/show_bug.cgi?id=684333